--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,19 +1,22 @@
 CC = gcc
-CFlAGS = -pedantic -Wall -ansi 
-LDFLAGS = -lm -lGL -lSDL2
+CFLAGS = -pedantic -Wall -std=gnu99 
+LDFLAGS = -lm -lGL -lSDL2 -lpthread
 DEPTS = ils.h
 OBJ = ils.o
 
 %.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) $(CFLAGS) -c -o $@ $< 
 
 ils: $(OBJ)
+	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
+
+stub: stub.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
 clean:
 	rm -rf *.o ils
 
 run: ils
-	./ils
+	./ils 8080
 
-.PHONY: ils clean
+.PHONY: ils clean run stub
