Joins Graphic code to Data code

--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,22 +1,24 @@
 CC = gcc
-CFLAGS = -pedantic -Wall -std=gnu99 
+CFLAGS = -pedantic -Wall -std=c99
 LDFLAGS = -lm -lGL -lSDL2 -lpthread
-DEPTS = ils.h
+DEPTS = ils.h reception_thread.h
 OBJ = ils.o
 
 %.o: %.c $(DEPS)
-	$(CC) $(CFLAGS) -c -o $@ $< 
+	$(CC) -c -o $@ $< $(CFLAGS)
+
+all: ils stub
 
 ils: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
+clean:
+	rm -rf *.o ils stub
+
+run: ils
+	./ils runways.txt 8080
+
 stub: stub.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
-clean:
-	rm -rf *.o ils
-
-run: ils
-	./ils 8080
-
-.PHONY: ils clean run stub
+.PHONY: ils clean run stub all
