--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
-CFLAGS = -pedantic -Wall -std=c99
-LDFLAGS = -lm -lGL -lSDL2 -lpthread
+CFLAGS = -pedantic -Wall -std=c99 -I/usr/include/SDL2
+LDFLAGS = -lm -lGL -lSDL2 -lpthread -lSDL2_ttf
 DEPTS = ils.h reception_thread.h
 OBJ = ils.o
 
