Fix segfault bug, creats dedicated main.c

--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,10 +1,9 @@
 CC = gcc
-CFLAGS = -pedantic -Wall -std=c99 -I/usr/include/SDL2 -D_POSIX_C_SOURCE
+CFLAGS = -pedantic -Wall -std=c99 -I/usr/include/SDL2 -D_POSIX_C_SOURCE 
 LDFLAGS = -lm -lGL -lSDL2 -lpthread -lSDL2_ttf
-DEPTS = ils.h reception_thread.h
-OBJ = ils.o
+OBJ = ils.o main.o
 
-%.o: %.c $(DEPS)
+%.o: %.c 
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 all: ils stub
@@ -13,7 +12,7 @@ ils: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LDFLAGS)
 
 clean:
-	rm -rf *.o ils stub
+	rm -rf *.o ils stub main
 
 run: ils
 	./ils runways.txt 8080
